# scream

./: .gitignore  .gitmodules  LICENSE  README.md  Scream.sln  azure-pipelines.yml
.github/workflows/: receiver-unix.yml
Install/: Install-arm64.bat  Install-x64.bat  Install-x86.bat  Install.bat  README.txt
Install/driver/: Scream.inf  Scream.sys  scream.cat
Install/driver/arm64/: Scream.inf  Scream.sys  scream.cat
Install/driver/x64/: Scream.inf  Scream.sys  scream.cat
Install/driver/x86/: Scream.inf  Scream.sys  scream.cat
Receivers/alsa/: Makefile  README.md  scream-alsa.c
Receivers/alsa-ivshmem/: Makefile  README.md  scream-ivshmem-alsa.c
Receivers/dotnet-windows/: .gitignore
Receivers/dotnet-windows/ScreamReader/: ScreamReader.sln  readme.md
Receivers/dotnet-windows/ScreamReader/ScreamReader/: About.Designer.cs  About.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  ScreamReader.csproj  UdpWaveStreamPlayer.cs  packages.config
Receivers/dotnet-windows/ScreamReader/ScreamReader/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Receivers/linux/: CMakeLists.txt  README.md  alsa.h  network.c  network.h  pulseaudio.c  scream.c  scream.h  shmem.c  shmem.h
Receivers/linux/pulseaudio/: README.md  scream-pulse.c
Receivers/pulseaudio/: Makefile  README.md  scream-pulse.c
Receivers/pulseaudio-ivshmem/: Makefile  README.md  scream-ivshmem-pulse.c
Receivers/raw/: Makefile  README.md  scream-raw.c  scream2aac.sh
Receivers/raw-ivshmem/: Makefile  README.md  scream-ivshmem-raw.c  scream2aac.sh
Receivers/unix/: CMakeLists.txt  README.md  alsa.c  config.h.in  jack.c  jack.h  network.c  network.h  pcap.c  pcap.h  pulseaudio.c  pulseaudio.h  raw.c  raw.h  scream.c  scream.h  scream2aac.sh  shell.nix  shmem.c  shmem.h  sndio.c  sndio.h
Scream/: Scream.inf  Scream.vcxproj  Scream.vcxproj.filters  ac3encoder.cpp  ac3encoder.h  adapter.cpp  common.cpp  common.h  hw.cpp  hw.h  ivshmemsavedata.cpp  ivshmemsavedata.h  kshelper.cpp  kshelper.h  minstream.cpp  minstream.h  mintopo.cpp  mintopo.h  minwave.cpp  minwave.h  resource.h  rtpheader.h  savedata.cpp  savedata.h  scream.h  scream.rc  toptable.h  wavtable.h
Scream Package/: Scream Package.vcxproj
TestSender/: MainWindow.cpp  MainWindow.h  MainWindow.ui  ScreamSender.pro
